Firefox Fix: About Page Spacing
- Spacing at the bottom of the page was very minimal on Firefox
browsers. Bumped up margin by 10%.

--- a/wp-content/themes/portfolio-theme/assets/css/main.css
+++ b/wp-content/themes/portfolio-theme/assets/css/main.css
@@ -988,7 +988,7 @@ textarea:focus {
 }
 
 .about-content--left p:last-child {
-  margin-bottom: 10%;
+  margin-bottom: 20%;
 }
 
 .about-content--right {
