--- a/wp-content/themes/portfolio-theme/assets/sass/pages/_about-page.scss
+++ b/wp-content/themes/portfolio-theme/assets/sass/pages/_about-page.scss
@@ -36,7 +36,7 @@
     margin-bottom: 5%;
 
     &:last-child {
-      margin-bottom: 10%;
+      margin-bottom: 20%;
     }
   }
 }
